add xpath to the cypress and update contact-us.js for the automationteststore

--- a/cypress-atomation-framework/package.json
+++ b/cypress-atomation-framework/package.json
@@ -9,6 +9,7 @@
   "author": "artem k",
   "license": "ISC",
   "devDependencies": {
+    "@cypress/xpath": "^2.0.3",
     "cypress": "^12.8.1"
   }
 }
